--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		
+		<finalName>JavaApp</finalName>
 	</build>
 
 </project>
